<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingTop="@dimen/dp_15"
    android:paddingBottom="@dimen/dp_15">

    <FrameLayout
        android:id="@+id/pdf_notify_layout"
        android:layout_width="168.0dip"
        android:layout_height="wrap_content"
        android:layout_marginStart="10.0dip">

        <ImageView
            android:layout_width="50.0dip"
            android:layout_height="50.0dip"
            android:src="@mipmap/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56.0dip"
            android:layout_marginTop="5.0dip"
            android:gravity="bottom|center"
            android:includeFontPadding="false"
            android:text="@string/notification_pdf_scanner_text"
            android:textColor="#ff1a1a1a"
            android:textSize="16.0sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="56.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_marginBottom="5.0dip"
            android:includeFontPadding="false"
            android:text="@string/notification_scan_to_pdf_text"
            android:textColor="#ff1a1a1a"
            android:textSize="12.0sp" />
    </FrameLayout>

    <TextView
        android:layout_width="0.33000004dip"
        android:layout_height="30.0dip"
        android:layout_weight="0.0"
        android:background="#ffc9c9c9" />

    <TextView
        android:id="@+id/picture_tv"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:drawableTop="@drawable/notification_pictures_icon"
        android:gravity="bottom|center"
        android:text="@string/notification_pictures_text"
        android:textColor="#ff565656"
        android:textSize="10.0sp" />

    <TextView
        android:id="@+id/pdf_tv"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:drawableTop="@drawable/notification_pdf_icon"
        android:gravity="bottom|center"
        android:text="@string/notification_pdf_text"
        android:textColor="#ff565656"
        android:textSize="10.0sp" />
</LinearLayout>