<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/dp_120"
        android:background="@color/white"
        android:focusable="true">


        <TextView
            android:id="@+id/tv_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="@dimen/dp_40"
            android:drawablePadding="@dimen/dp_14"
            android:text="@string/privacy_policy"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            app:drawableStartCompat="@drawable/ic_private"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:drawablePadding="@dimen/dp_13"
            android:text="@string/about_us"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            app:drawableStartCompat="@drawable/ic_about_us"
            app:layout_constraintStart_toStartOf="@+id/tv_privacy"
            app:layout_constraintTop_toBottomOf="@+id/tv_privacy" />

        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:drawablePadding="@dimen/dp_13"
            android:text="@string/exit"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            app:drawableStartCompat="@drawable/ic_exit"
            app:layout_constraintStart_toStartOf="@+id/tv_privacy"
            app:layout_constraintTop_toBottomOf="@+id/tv_about" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>