<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="@dimen/dp_59"
                android:layout_height="@dimen/dp_59"
                android:layout_marginTop="@dimen/dp_30"
                android:src="@mipmap/logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                style="@style/txt15_black_bold"
                android:layout_marginTop="@dimen/dp_30"
                android:gravity="center"
                android:text="@string/confirm_to_logout_of"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivClose" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_29"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_29"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle">

                <Button
                    android:id="@+id/btnStart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:background="@drawable/dialog_btn"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_15"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginBottom="@dimen/dp_27"
                    android:background="@drawable/dialog_btn_cancel"
                    android:text="@string/exit"
                    android:textAllCaps="false"
                    android:textColor="#ff3b3b3b"
                    android:textSize="@dimen/sp_15"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>