<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_230"
        android:background="@drawable/dialog_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_74">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_42"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginEnd="@dimen/dp_30"
                android:background="@drawable/bg_input"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etInput"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:layout_weight="1"
                    android:width="@dimen/dp_90"
                    android:background="@color/white"
                    android:hint="@string/please_input_pdf_name"
                    android:minWidth="@dimen/dp_90"
                    android:paddingStart="@dimen/dp_5"
                    android:paddingEnd="@dimen/dp_5"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <ImageView
                    android:id="@+id/ivClear"
                    android:layout_width="@dimen/dp_14"
                    android:layout_height="@dimen/dp_14"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_15"
                    android:src="@drawable/icon_input_close" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/dp_63"
            android:layout_marginTop="@dimen/dp_46"
            android:layout_marginEnd="@dimen/dp_63"
            android:layout_marginBottom="@dimen/dp_20"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvConfirm"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_30"
                android:layout_weight="1"
                android:background="@drawable/dialog_btn"
                android:gravity="center"
                android:text="@string/complete"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_13" />

            <TextView
                android:id="@+id/tvCancel"
                style="@style/txt14_white"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_weight="1"
                android:background="@drawable/dialog_btn_cancel"
                android:gravity="center"
                android:text="@string/cancel"
                android:textSize="@dimen/sp_13" />
        </LinearLayout>
    </LinearLayout>
</layout>