<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_164"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_15"
        android:paddingTop="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_10">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_17"
            android:layout_marginEnd="@dimen/dp_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close" />

        <TextView
            android:id="@+id/tv_rename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/rename"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_13"
            app:layout_constraintEnd_toEndOf="@+id/iv_rename"
            app:layout_constraintStart_toStartOf="@+id/iv_rename"
            app:layout_constraintTop_toBottomOf="@+id/iv_rename" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:drawablePadding="@dimen/dp_8"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_13"
            app:layout_constraintEnd_toEndOf="@+id/iv_delete"
            app:layout_constraintStart_toStartOf="@+id/iv_delete"
            app:layout_constraintTop_toBottomOf="@+id/iv_delete" />

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:drawablePadding="@dimen/dp_8"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_13"
            app:layout_constraintEnd_toEndOf="@+id/iv_share"
            app:layout_constraintStart_toStartOf="@+id/iv_share"
            app:layout_constraintTop_toBottomOf="@+id/iv_share" />

        <ImageView
            android:id="@+id/iv_rename"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_delete"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_rename" />

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_share"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_rename"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_delete" />

        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_delete"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_share" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>