<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="@dimen/dp_90"
            android:layout_height="@dimen/dp_90"
            android:layout_marginTop="@dimen/dp_120"
            android:src="@mipmap/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:textColor="@color/black"
            android:text="@string/app_name"
            android:textSize="@dimen/sp_24"
            app:layout_constraintEnd_toEndOf="@id/icon"
            app:layout_constraintStart_toStartOf="@id/icon"
            app:layout_constraintTop_toBottomOf="@id/icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn" />

        <TextView
            android:id="@+id/tv_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_20"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_10"
            app:layout_constraintBottom_toTopOf="@+id/btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="By clicking Start, I agree to the Privacy Policy."
            tools:visibility="gone" />

        <TextView
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_46"
            android:layout_marginEnd="@dimen/dp_46"
            android:layout_marginBottom="@dimen/dp_46"
            android:background="@drawable/btn_splash"
            android:gravity="center"
            android:text="@string/start"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/sp_17"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="gone" />

        <ProgressBar
            android:id="@+id/pb"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_28"
            android:layout_marginEnd="@dimen/dp_28"
            android:layout_marginBottom="@dimen/dp_13"
            tools:progress="50"
            android:max="100"
            android:progressDrawable="@drawable/progress_bar_drawable"
            app:layout_constraintBottom_toTopOf="@+id/tv_load"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_28"
            android:layout_marginBottom="@dimen/dp_52"
            android:text="@string/start_loading"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>