<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_51"
            android:background="@color/toolbar_color"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@id/ivBack"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_12"
                android:src="@drawable/ic_back_white" />

            <ImageView
                android:id="@+id/ivDelete"
                android:layout_width="@dimen/dp_25"
                android:layout_height="@dimen/dp_25"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dp_12"
                android:src="@drawable/ic_delete_white" />

            <TextView
                android:id="@+id/tvTitle"
                style="@style/txt15_white_bold"
                android:layout_centerInParent="true" />
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/adLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/icon_ad_loading" />
        </FrameLayout>

        <com.yg.pdf.weight.NoScrollViewPager
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adLayout" />

        <ImageView
            android:id="@+id/ivLeft"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_15"
            android:src="@drawable/ic_arrow_left"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/viewPager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adLayout"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/ivRight"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_15"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@+id/viewPager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adLayout" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_22"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/btnStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tvCrop"
                style="@style/txt14_white"
                android:layout_width="0.0dip"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/auto_crop"
                app:drawableTopCompat="@drawable/icon_crop" />

            <TextView
                android:id="@+id/tvLeft"
                style="@style/txt14_white"
                android:layout_width="0.0dip"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/left"
                app:drawableTopCompat="@drawable/ic_crop_left" />

            <TextView
                android:id="@+id/tvRight"
                style="@style/txt14_white"
                android:layout_width="0.0dip"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/right"
                app:drawableTopCompat="@drawable/ic_crop_right" />
        </LinearLayout>

        <TextView
            android:id="@+id/btnStart"
            android:layout_width="@dimen/dp_320"
            android:layout_height="@dimen/dp_44"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dp_45"
            android:background="@drawable/solide_btn"
            android:gravity="center"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>