<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black">

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="@dimen/dp_28"
                android:layout_height="@dimen/dp_28"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_25"
                android:src="@drawable/ic_dialog_close"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                style="@style/txt23_black_bold"
                android:layout_marginTop="@dimen/dp_24"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivFinish"
                android:layout_width="@dimen/dp_28"
                android:layout_height="@dimen/dp_28"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_marginEnd="@dimen/dp_30"
                android:src="@drawable/ic_dialog_finish"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SeekBar
                android:id="@+id/seekBar"
                style="@style/StyleProgressBarMini"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_13"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_60"
                android:layout_marginEnd="@dimen/dp_15"
                android:background="@null"
                android:indeterminateOnly="false"
                android:max="100"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:progress="0"
                android:progressDrawable="@drawable/gradient_upgrade_left"
                android:splitTrack="false"
                android:thumb="@null"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_29"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_39"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekBar">

                <TextView
                    android:id="@+id/tvLeft"
                    style="@style/txt14_black"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_30"
                    android:layout_weight="1"
                    android:background="@drawable/selector_adjust_background"
                    android:gravity="center"
                    android:text="@string/contrast_ratio" />

                <TextView
                    android:id="@+id/tvCenter"
                    style="@style/txt14_black"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginStart="@dimen/dp_15"
                    android:layout_marginEnd="@dimen/dp_15"
                    android:layout_weight="1"
                    android:background="@drawable/selector_adjust_background"
                    android:gravity="center"
                    android:text="@string/brightness" />

                <TextView
                    android:id="@+id/tvRight"
                    style="@style/txt14_black"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_30"
                    android:layout_weight="1"
                    android:background="@drawable/selector_adjust_background"
                    android:gravity="center"
                    android:text="@string/details" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>